added another webpage

--- a/my_webpage.html
+++ b/my_webpage.html
@@ -4,6 +4,7 @@
 
 <h2>HTML Image</h2>
 <img src="images/pic_trulli.jpg" alt="Trulli" width="500" height="333">
-
+<a href="about_company.html">About Us</a>
+<h3>Have a nice day!</h3>
 </body>
 </html>
